--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,6 +19,9 @@ $bg_new_item:#ff0000;
 $bg_like_heart:#f42c48;
 $bg_dropdown_hover:#ecf0f4;
 
+$bg_back:#f6f7f9;
+$box-shadow-back:#bfc1c6;
+
 
 $item_price_color:#0042ff;
 $item_title_color:#0b2546;
