--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -230,7 +230,7 @@ h4.title {
 }
 
 .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
-  padding: 0.5% 10%;
+  padding: 1% 10%;
 }
 
 h5.title {
@@ -541,9 +541,21 @@ nav ol.breadcrumb li {
   nav ol.breadcrumb {
     width: 84%;
   }
+  .h4-title {
+    padding: 3% 8%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1% 8%;
+  }
 }
 
 @media all and (max-width: 1400px) {
+  .h4-title {
+    padding: 2% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1% 5%;
+  }
   nav ol.breadcrumb {
     width: 90%;
   }
@@ -575,6 +587,12 @@ nav ol.breadcrumb li {
     width: 80%;
     margin: 0 auto;
   }
+  .h4-title {
+    padding: 2.5% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1.5% 5%;
+  }
 }
 
 @media all and (max-width: 800px) {
@@ -586,6 +604,15 @@ nav ol.breadcrumb li {
 @media all and (max-width: 600px) {
   h5.price, h6.old-price {
     font-size: 20px;
+  }
+  .h4-title {
+    padding: 3% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 2% 5%;
+  }
+  h4.title {
+    font-size: 24px;
   }
 }
 
@@ -601,6 +628,9 @@ nav ol.breadcrumb li {
   }
   .newone, .recommended, .popular-products {
     height: 565px !important;
+  }
+  h4.title {
+    font-size: 22px;
   }
 }
 
@@ -2174,52 +2204,410 @@ img.menu-auto-icon:hover {
   }
 }
 
-nav.products-pagination {
+.outter-sign-reg {
+  width: 100%;
+  padding: 3% 20% 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  text-align: start;
+}
+
+.outter-sign-reg .inner-sign-reg {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 2% 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
-nav.products-pagination ul {
+.outter-sign-reg .inner-sign-reg form {
+  width: 48%;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number {
+  text-align: start;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number label {
+  font-size: 18px;
+  color: black;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number label.mail-phone-number {
+  text-align: left;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input {
+  width: 100%;
+  border: 1px solid #d1d8e0;
+  border-radius: 20px;
+  margin-bottom: 5%;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input input {
+  height: 45px;
+  border: none;
+  border-radius: 20px;
+  color: #a5b1c2;
+  font-size: 20px;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input input::-webkit-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input input:-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input input::-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-sign-reg .inner-sign-reg form .phone-number .input input::placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-sign-reg .inner-sign-reg form .oneline-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.outter-sign-reg .inner-sign-reg form .oneline-label .forget-password {
+  color: #a4b0be;
+  font-size: 14px;
+}
+
+.outter-sign-reg .inner-sign-reg form input#submit {
+  line-height: 50px;
+  background: #0042ff;
+  border-radius: 25px;
+  font-family: 'cerapro-bold';
+  font-size: 18px;
+  padding: 0;
+  width: 100%;
   margin: 0;
-}
-
-nav.products-pagination ul li {
-  width: 50px;
-  height: 50px;
-  margin: 0 10px 0 0;
-  border: 1px solid #a9b4c2;
-  border-radius: 50%;
-}
-
-nav.products-pagination ul li.active {
-  background: #07108f;
-}
-
-nav.products-pagination ul li.active a {
   color: white;
 }
 
-nav.products-pagination ul li a {
-  color: #07108f;
-  line-height: 50px;
+.outter-sign-reg .inner-sign-reg form .enter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.outter-sign-reg .inner-sign-reg form .enter input#submit {
+  margin: 0;
+  width: 48%;
+  border-radius: 20px;
+}
+
+.outter-sign-reg .inner-sign-reg form .enter .form-check {
+  width: 40%;
+  margin: 0;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through {
+  width: 48%;
+  text-align: start;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through label {
+  font-size: 18px;
+  color: black;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons {
+  width: 100%;
+  min-height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons i {
+  font-size: 18px;
+  padding: 14px;
+  border-radius: 50%;
+  color: white;
+  margin-right: 10px;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons i.mbfacebook {
+  background: #405994;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons i.mbtwitter {
+  background: #1da1f2;
+}
+
+.outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons i.mbvkontakte {
+  background: #5082b9;
+}
+
+.outter-sign-reg a {
+  font-size: 18px;
+  color: #0042ff;
+  margin: 1% 0;
+}
+
+@media all and (max-width: 1522px) {
+  .outter-sign-reg {
+    padding: 2% 18%;
+  }
+}
+
+@media all and (max-width: 1245px) {
+  .outter-sign-reg {
+    padding: 3% 10% 2%;
+  }
+}
+
+@media all and (max-width: 1000px) {
+  .outter-sign-reg {
+    padding: 3% 5% 2%;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .outter-sign-reg {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .outter-sign-reg .inner-sign-reg {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .outter-sign-reg .inner-sign-reg form {
+    width: 60%;
+  }
+  .outter-sign-reg .inner-sign-reg form .phone-number {
+    text-align: center;
+  }
+  .outter-sign-reg .inner-sign-reg form .phone-number.mail-phone-number {
+    text-align: left;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through {
+    width: 60%;
+    text-align: center;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through .social-app-icons {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .outter-sign-reg a {
+    margin: 3% 0;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .outter-sign-reg .inner-sign-reg form {
+    width: 70%;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through {
+    width: 70%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .outter-sign-reg .inner-sign-reg form {
+    width: 80%;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through {
+    width: 80%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .outter-sign-reg .inner-sign-reg form {
+    width: 90%;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through {
+    width: 90%;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .outter-sign-reg .inner-sign-reg form {
+    width: 90%;
+  }
+  .outter-sign-reg .inner-sign-reg form .phone-number .input input {
+    height: 30px;
+  }
+  .outter-sign-reg .inner-sign-reg form input#submit {
+    line-height: 40px;
+    font-size: 16px;
+  }
+  .outter-sign-reg .inner-sign-reg .sign-in-through {
+    width: 90%;
+  }
+}
+
+.outter-resend-sms {
+  width: 100%;
+  padding: 5% 0;
+}
+
+.outter-resend-sms .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+  width: 40%;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.outter-resend-sms .inner form {
+  width: 100%;
+  margin-bottom: 0;
+  text-align: left;
+}
+
+.outter-resend-sms .inner form label {
+  font-size: 18px;
+  color: black;
+}
+
+.outter-resend-sms .inner form .input {
+  width: 100%;
+  border: 1px solid #d1d8e0;
+  border-radius: 20px;
+  margin-bottom: 5%;
+}
+
+.outter-resend-sms .inner form .input input {
+  height: 45px;
+  border: none;
+  border-radius: 20px;
+  color: #a5b1c2;
   font-size: 20px;
-  padding: 0;
-  font-weight: bold;
 }
 
-nav.products-pagination ul li a i {
-  font-size: 15px;
+.outter-resend-sms .inner form .input input::-webkit-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-resend-sms .inner form .input input:-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-resend-sms .inner form .input input::-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-resend-sms .inner form .input input::placeholder {
+  color: #a5b1c2;
+  font-size: 18px;
+}
+
+.outter-resend-sms .inner form input#submit {
   line-height: 50px;
+  background: #ced6e0;
+  border-radius: 25px;
+  font-family: 'cerapro-bold';
+  font-size: 18px;
+  padding: 0;
+  width: 100%;
+  margin: 0;
+  color: white;
+  margin-bottom: 5%;
 }
 
-nav.products-pagination ul li a i:before {
-  color: #07108f;
+.outter-resend-sms .inner a {
+  font-size: 18px;
+  color: #0042ff;
+  margin: 1% 0;
 }
 
 .news-letter {
@@ -2590,142 +2978,4 @@ footer .footer-outter .social-contacts .contacts a.email::before {
     width: 215px;
     height: 70px;
   }
-}
-
-#show-cart {
-  min-height: 300px;
-  width: 60%;
-  margin: 2% auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-}
-
-#show-cart h6 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 2% 0 0;
-  color: #0b2546;
-}
-
-#show-cart .list-items .selected-items {
-  height: 150px;
-  width: 100%;
-  margin: 2% 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border-bottom: 1px solid #a4b0be;
-  padding: 15px 5px;
-}
-
-#show-cart .list-items .selected-items .product-img {
-  width: 15%;
-  height: 100px;
-}
-
-#show-cart .list-items .selected-items .product-img img {
-  width: auto;
-  height: 100%;
-}
-
-#show-cart .list-items .selected-items .description {
-  width: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#show-cart .list-items .selected-items .description .add-product, #show-cart .list-items .selected-items .description .subtract-product {
-  padding: 0px;
-  border-radius: 10px;
-  width: 30px;
-  height: 30px;
-  font-size: 15px;
-  line-height: 30px;
-  text-align: center;
-  background: #0042ff;
-  color: white;
-  font-weight: bold;
-}
-
-#show-cart .list-items .selected-items .description .delete-product {
-  padding: 0;
-  margin: 0;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-#show-cart .list-items .selected-items .description .delete-product:hover {
-  background: #f42c48;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-#show-cart .list-items .selected-items .description .delete-product i {
-  font-size: 7px;
-  background: #a4b0be;
-  padding: 10px;
-  border-radius: 50%;
-}
-
-#show-cart .total-cart {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 1% 0 5%;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-#show-cart .total-cart span {
-  margin-left: 15px;
-}
-
-#show-cart button.clear-cart {
-  font-size: 16px;
-  color: white;
-  background: #0042ff;
-  border: none;
-  width: 15%;
-  font-weight: bold;
-  margin: 0 auto;
-  padding: 12px 23px;
-  border-radius: 23px;
-  -webkit-transition: .2s ease-in-out;
-  transition: .2s ease-in-out;
-}
-
-#show-cart button.clear-cart:hover {
-  -webkit-transition: .2s ease-in-out;
-  transition: .2s ease-in-out;
-  -webkit-box-shadow: 0px 2px 5px 1px #0042ff;
-          box-shadow: 0px 2px 5px 1px #0042ff;
-}
-
-#show-cart button.clear-cart:focus {
-  background: #11da53;
-  outline: none;
-  -webkit-box-shadow: 0px 2px 5px 1px #11da53;
-          box-shadow: 0px 2px 5px 1px #11da53;
 }
