--- a/public/css/pay.css
+++ b/public/css/pay.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("/css/mybazar-fonts.css");
 .pn-ProductNav_Wrapper {
   width: 88%;
@@ -230,7 +231,7 @@ h4.title {
 }
 
 .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
-  padding: 0.5% 10%;
+  padding: 1% 10%;
 }
 
 h5.title {
@@ -541,9 +542,21 @@ nav ol.breadcrumb li {
   nav ol.breadcrumb {
     width: 84%;
   }
+  .h4-title {
+    padding: 3% 8%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1% 8%;
+  }
 }
 
 @media all and (max-width: 1400px) {
+  .h4-title {
+    padding: 2% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1% 5%;
+  }
   nav ol.breadcrumb {
     width: 90%;
   }
@@ -575,6 +588,12 @@ nav ol.breadcrumb li {
     width: 80%;
     margin: 0 auto;
   }
+  .h4-title {
+    padding: 2.5% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 1.5% 5%;
+  }
 }
 
 @media all and (max-width: 800px) {
@@ -586,6 +605,15 @@ nav ol.breadcrumb li {
 @media all and (max-width: 600px) {
   h5.price, h6.old-price {
     font-size: 20px;
+  }
+  .h4-title {
+    padding: 3% 5%;
+  }
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
+    padding: 2% 5%;
+  }
+  h4.title {
+    font-size: 24px;
   }
 }
 
@@ -601,6 +629,9 @@ nav ol.breadcrumb li {
   }
   .newone, .recommended, .popular-products {
     height: 565px !important;
+  }
+  h4.title {
+    font-size: 22px;
   }
 }
 
@@ -2174,6 +2205,289 @@ img.menu-auto-icon:hover {
   }
 }
 
+.current-old-price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.current-old-price.vertical {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.current-old-price.horizontal {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.current-old-price h5.price {
+  font-size: 24px;
+  font-weight: 600;
+  color: #0042ff;
+}
+
+.current-old-price h5.price span {
+  font-weight: 300;
+}
+
+.current-old-price h6.old-price {
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: line-through;
+  color: #a4b0be;
+}
+
+.current-old-price h6.old-price span {
+  font-weight: 300;
+}
+
+.item-action-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  bottom: 0;
+}
+
+.item-action-icons div {
+  border: 1px solid #1d3553;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  background: white;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.item-action-icons div i {
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.item-action-icons div.cart:hover, .item-action-icons div.libra:hover, .item-action-icons div.like:hover {
+  -webkit-box-shadow: 0px 4px 10px -6px black;
+          box-shadow: 0px 4px 10px -6px black;
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.selected_libra, .selected_cart, .selected_like {
+  color: white;
+  border: none !important;
+  background: #0042ff !important;
+  -webkit-box-shadow: 0px 2px 7px -5px black !important;
+          box-shadow: 0px 2px 7px -5px black !important;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+.selected_libra i:before, .selected_cart i:before, .selected_like i:before {
+  color: white !important;
+}
+
+.selected_like {
+  background: #f42c48 !important;
+}
+
+.rate {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.rate .commet {
+  width: 18%;
+}
+
+.rate .commet i {
+  font-size: 22px;
+}
+
+.rate .commet span {
+  font-size: 20px;
+  color: #a4b0be;
+}
+
+.rating {
+  float: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-flow: row-reverse;
+          flex-flow: row-reverse;
+  border: none !important;
+}
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
+    follow these rules. Every browser that supports :checked also supports :not(), so
+    it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+  position: absolute;
+  top: -9999px;
+  clip: rect(0, 0, 0, 0);
+}
+
+.rating:not(:checked) > label {
+  float: right;
+  width: 1em;
+  /* padding:0 .1em; */
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 200%;
+  /* line-height:1.2; */
+  color: #ddd;
+}
+
+.rating:not(:checked) > label:before {
+  content: '★ ';
+}
+
+.rating > input:checked ~ label {
+  color: #ffc621;
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+  color: #ffc621;
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+  color: #ffc621;
+}
+
+.rating > label:active {
+  position: relative;
+  top: 2px;
+  left: 2px;
+}
+
+@media all and (max-width: 1800px) {
+  .rating:not(:checked) > label {
+    font-size: 170%;
+  }
+}
+
+@media all and (max-width: 1665px) {
+  .rating:not(:checked) > label {
+    font-size: 135%;
+  }
+  .comment {
+    font-size: 14px;
+  }
+  .current-old-price h5.price {
+    font-size: 18px;
+  }
+  .current-old-price h6.old-price {
+    font-size: 16px;
+  }
+  .item-action-icons div {
+    width: 30px;
+    height: 30px;
+  }
+  .item-action-icons div i {
+    font-size: 14px;
+    line-height: 30px;
+  }
+}
+
+@media all and (max-width: 1250px) {
+  .rate {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .rating:not(:checked) > label {
+    font-size: 200%;
+  }
+  .comment {
+    font-size: 20px;
+  }
+  .item-action-icons div {
+    width: 40px;
+    height: 40px;
+  }
+  .item-action-icons div i {
+    font-size: 20px;
+    line-height: 40px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .rating:not(:checked) > label {
+    font-size: 190%;
+  }
+  .item-action-icons div {
+    width: 30px;
+    height: 30px;
+  }
+  .item-action-icons div i {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .comment {
+    font-size: 18px;
+  }
+}
+
 .outter-pay-checkout-cart {
   width: 100%;
   background: white;
@@ -2271,6 +2585,8 @@ img.menu-auto-icon:hover {
   font-family: 'cerapro-bold';
   font-size: 30px;
   margin-bottom: 3%;
+  overflow: auto;
+  white-space: normal;
 }
 
 .outter-pay-checkout-cart .inner-pay-checkout-cart h6.sub-title {
@@ -2315,6 +2631,26 @@ img.menu-auto-icon:hover {
 
 .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.wishes div input {
   width: 100%;
+}
+
+.outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.wishes div input::-webkit-input-placeholder {
+  color: #a5b1c2;
+  font-size: 20px;
+}
+
+.outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.wishes div input:-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 20px;
+}
+
+.outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.wishes div input::-ms-input-placeholder {
+  color: #a5b1c2;
+  font-size: 20px;
+}
+
+.outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.wishes div input::placeholder {
+  color: #a5b1c2;
+  font-size: 20px;
 }
 
 .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.three-inputs {
@@ -2469,8 +2805,12 @@ img.menu-auto-icon:hover {
   color: black;
   font-size: 18px;
   line-height: 35px;
-  margin-bottom: 10%;
+  margin-bottom: 2%;
   float: right;
+}
+
+.outter-pay-checkout-cart .inner-pay-checkout-cart .pn-ProductNav_Wrapper {
+  width: 100%;
 }
 
 .outter-pay-checkout-cart button.pay {
@@ -2482,7 +2822,7 @@ img.menu-auto-icon:hover {
   line-height: 50px;
   padding: 0;
   font-family: 'cerapro-bold';
-  margin-bottom: 2%;
+  margin: 2%;
   display: block;
 }
 
@@ -2504,7 +2844,7 @@ img.menu-auto-icon:hover {
 }
 
 .outter-pay-checkout-cart .all-items .item {
-  height: 390px;
+  height: 400px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2550,19 +2890,53 @@ img.menu-auto-icon:hover {
 .outter-pay-checkout-cart .all-items .item .description {
   width: 66%;
   height: 100%;
-  padding: 2%  2% 2% 0;
+  padding: 1%  2% 1% 0;
   text-align: left;
   position: relative;
 }
 
 .outter-pay-checkout-cart .all-items .item .description h6 {
+  font-size: 24px;
   font-family: 'cerapro-regular';
+  margin-bottom: 2%;
 }
 
-.outter-pay-checkout-cart .all-items .item .description .item-action-icons {
+.outter-pay-checkout-cart .all-items .item .description .count-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1% 0 2%;
+}
+
+.outter-pay-checkout-cart .all-items .item .description .count-div i {
+  font-size: 22px;
+  padding: 10px;
+  border: 1px solid #a8b3c1;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.outter-pay-checkout-cart .all-items .item .description .count-div .number {
+  padding: 12px 50px;
+  text-align: center;
+  font-size: 20px;
+  margin-right: 10px;
+  color: #242954;
+  border: 1px solid #a8b3c1;
+  border-radius: 20px;
+}
+
+.outter-pay-checkout-cart .all-items .item .description .item-action-icons {
   position: relative;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -2572,6 +2946,7 @@ img.menu-auto-icon:hover {
 .outter-pay-checkout-cart .all-items .item .description .item-action-icons div {
   height: 50px;
   width: 50px;
+  margin-bottom: 15px;
 }
 
 .outter-pay-checkout-cart .all-items .item .description .item-action-icons div i {
@@ -2628,8 +3003,260 @@ img.menu-auto-icon:hover {
 
 .outter-pay-checkout-cart .all-items .item .description p.sub-title.bottom {
   display: block;
-  bottom: 2%;
+  bottom: 0;
   position: absolute;
+}
+
+.back-to-products {
+  display: none;
+}
+
+@media all and (max-width: 1522px) {
+  .outter-pay-checkout-cart {
+    padding: 2% 8%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form input#submit {
+    width: 30%;
+  }
+}
+
+@media all and (max-width: 1400px) {
+  .outter-pay-checkout-cart {
+    padding: 2% 5%;
+  }
+}
+
+@media all and (max-width: 1350px) {
+  .outter-pay-checkout-cart .ur-cart {
+    width: 23%;
+  }
+  .outter-pay-checkout-cart .ur-cart button.back-to-address {
+    line-height: 45px;
+  }
+  .outter-pay-checkout-cart .ur-cart h6 {
+    font-size: 28px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart h6 {
+    font-size: 28px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart .check-labels {
+    width: 80%;
+  }
+}
+
+@media all and (max-width: 1150px) {
+  .outter-pay-checkout-cart .ur-cart {
+    width: 25%;
+  }
+  .outter-pay-checkout-cart .ur-cart button.back-to-address {
+    line-height: 45px;
+  }
+  .outter-pay-checkout-cart .ur-cart h6 {
+    font-size: 28px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart {
+    width: 75%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart h6 {
+    font-size: 28px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart .check-labels {
+    width: 80%;
+  }
+}
+
+@media all and (max-width: 1000px) {
+  .outter-pay-checkout-cart .ur-cart {
+    width: 30%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart {
+    width: 70%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    margin: 0;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group div {
+    width: 100%;
+    margin-bottom: 2%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.three-inputs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.three-inputs .outter {
+    width: 48%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.three-inputs .outter.house-number div {
+    width: 100%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group.three-inputs .street {
+    width: 100%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form input#submit {
+    width: auto;
+    padding: 0 30px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .outter-pay-checkout-cart {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .outter-pay-checkout-cart p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .outter-pay-checkout-cart button.pay {
+    width: 40%;
+    line-height: 40px;
+  }
+  .outter-pay-checkout-cart .ur-cart {
+    width: 100%;
+  }
+  .outter-pay-checkout-cart .ur-cart button.back-to-address {
+    margin: 3%;
+    line-height: 30px;
+  }
+  .outter-pay-checkout-cart .ur-cart p.overall {
+    margin-top: 2%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart {
+    width: 100%;
+    margin-top: 3%;
+    padding: 0;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group {
+    width: 100%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group div label {
+    font-size: 16px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group div .input input {
+    height: 30px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form .form-group div select {
+    height: 30px;
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart form input#submit {
+    line-height: 40px;
+  }
+  .back-to-products {
+    width: 100%;
+    height: 100px;
+    background: #f6f7f9;
+    -webkit-box-shadow: inset 0px 10px 10px -2px #bfc1c6;
+    box-shadow: inset 0px 10px 10px -2px #bfc1c6;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .back-to-products button {
+    width: 40%;
+    color: white;
+    border-radius: 25px;
+    background: #07108f;
+    font-family: 'cerapro-bold';
+    font-size: 18px;
+    padding: 10px 20px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .outter-pay-checkout-cart {
+    padding: 2% 8%;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart .check-labels {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart .check-labels div {
+    margin: 1% 0;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .outter-pay-checkout-cart .ur-cart h6 {
+    font-size: 26px;
+  }
+  .outter-pay-checkout-cart p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart h6.title {
+    font-size: 26px;
+  }
+  .outter-pay-checkout-cart button.pay {
+    width: 60%;
+  }
+  .back-to-products button {
+    width: 60%;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .outter-pay-checkout-cart .ur-cart h6 {
+    font-size: 24px;
+  }
+  .outter-pay-checkout-cart .inner-pay-checkout-cart h6.title {
+    font-size: 24px;
+    margin-top: 5%;
+  }
 }
 
 .news-letter {
