--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -56,7 +56,7 @@ h4.title{
     background:$bg_grey_color;
     &.video-blog, &.catalog-view, &.pay-body,
      &.sales-body, &.recently-viewed, &.brands-alphabet{
-        padding:0.5% 10%;
+        padding:1% 10%;
     }
 }
 h5.title{
@@ -310,8 +310,22 @@ nav ol.breadcrumb{
     nav ol.breadcrumb{
         width:84%;
     }
+    .h4-title{
+        padding:3% 8%;
+        &.video-blog, &.catalog-view, &.pay-body,
+         &.sales-body, &.recently-viewed, &.brands-alphabet{
+            padding:1% 8%;
+        }
+    }
 }
 @media all and (max-width:1400px){
+    .h4-title{
+        padding:2% 5%;
+        &.video-blog, &.catalog-view, &.pay-body,
+         &.sales-body, &.recently-viewed, &.brands-alphabet{
+            padding:1% 5%;
+        }
+    }
     nav ol.breadcrumb{
         width:90%;
     }
@@ -359,6 +373,13 @@ nav ol.breadcrumb{
             }
         }
     }
+    .h4-title{
+        padding:2.5% 5%;
+        &.video-blog, &.catalog-view, &.pay-body,
+         &.sales-body, &.recently-viewed, &.brands-alphabet{
+            padding:1.5% 5%;
+        }
+    }
 }
 @media all and (max-width:800px){
     .outter-products{
@@ -377,6 +398,16 @@ nav ol.breadcrumb{
     h5.price, h6.old-price{
         font-size:20px;
     }
+    .h4-title{
+        padding:3% 5%;
+        &.video-blog, &.catalog-view, &.pay-body,
+         &.sales-body, &.recently-viewed, &.brands-alphabet{
+            padding:2% 5%;
+        }
+    }
+    h4.title{
+        font-size:24px;
+    }
 }
 @media all and (max-width:400px){
     .outter-products{
@@ -390,6 +421,9 @@ nav ol.breadcrumb{
     }
     .newone, .recommended, .popular-products{
         height:565px !important;
+    }
+    h4.title{
+        font-size:22px;
     }
 }
 
