--- a/resources/sass/auth.scss
+++ b/resources/sass/auth.scss
@@ -10,10 +10,9 @@
 @import "2-layouts/top-header";
 @import "2-layouts/main-header";
 @import "2-layouts/nav-header";
-@import "2-layouts/price-rating-comments";
-@import "2-layouts/pay-checkout-cart";
+@import "2-layouts/auth-body";
+@import "2-layouts/sms-body";
 
 
 @import "2-layouts/news-letter";
 @import "2-layouts/footer";
-
