--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1418,7 +1418,7 @@ nav#menu .mm-navbar__title span {
 
 .main-header .from-statistics-to-account .dropdown .dropdown-menu .dropdown-item .delete-btn i {
   font-size: 6px;
-  line-height: 20px;
+  line-height: 18px;
   padding: 0;
   margin: 0;
 }
@@ -3316,6 +3316,16 @@ img.menu-auto-icon:hover {
 .outter-blogs .item {
   height: 310px;
   margin: 2% 0;
+  position: relative;
+}
+
+.outter-blogs .item img {
+  width: 100%;
+  height: 100%;
+}
+
+.outter-blogs .item .description {
+  position: absolute;
   padding: 0 0 20px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3330,33 +3340,16 @@ img.menu-auto-icon:hover {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.outter-blogs .item h5 {
+.outter-blogs .item .description h5 {
   color: white;
   text-align: start;
   font-size: 22px;
-}
-
-.outter-blogs .item.first {
-  background: url(../images/blog1.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.outter-blogs .item.second {
-  background: url(../images/blog2.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.outter-blogs .item.third {
-  background: url(../images/blog3.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .outter-blogs .owl-dots {
@@ -3378,6 +3371,7 @@ img.menu-auto-icon:hover {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background: white;
+  text-align: left;
 }
 
 .top-brands .two-rows-brands {
