--- a/resources/sass/2-layouts/_top-brands.scss
+++ b/resources/sass/2-layouts/_top-brands.scss
@@ -4,6 +4,7 @@
     padding:1% 10%;
     box-sizing:border-box;
     background:white;
+    text-align:left;
     .two-rows-brands{
         height:45px;
         .col-1{
