--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -17,7 +17,7 @@
 @import "2-layouts/price-rating-comments";
 @import "2-layouts/threesmallbanners";
 
-@import "2-layouts/shops";
+@import "2-layouts/index-shop-views";
 @import "2-layouts/full-banner";
 @import "2-layouts/blogs";
 @import "2-layouts/top-brands";
