--- a/public/css/shop-view.css
+++ b/public/css/shop-view.css
@@ -3866,6 +3866,287 @@ img.menu-auto-icon:hover {
   }
 }
 
+.shops {
+  width: 100%;
+  height: 920px;
+  background: #f1f2f6;
+}
+
+.shops .outter-shops {
+  width: 100%;
+  height: 835px;
+  background: white;
+  position: relative;
+}
+
+.shops .outter-shops .all-shops {
+  height: 840px;
+  width: 80%;
+  margin: 0 auto;
+  position: absolute;
+  left: 10%;
+  top: -3%;
+}
+
+.shops .outter-shops .all-shops .shops-fr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item {
+  border: 1px solid #dfe4ea;
+  background: white;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .shop-name-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px 0 0 15px;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .shop-name-logo img {
+  margin-right: 15px;
+  width: 30px;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .shop-name-logo h6, .shops .outter-shops .all-shops .shops-fr .item .shop-name-logo p {
+  margin: 0;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .shop-name-logo p.sub-title {
+  font-size: 16px;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .product-images {
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .product-images .big-img {
+  width: 75%;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .product-images .small-img {
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.shops .outter-shops .all-shops .shops-fr .item .product-images .small-img img {
+  margin: 15% 0;
+}
+
+.shops .outter-shops .all-shops .shops-fr button.owl-prev,
+.shops .outter-shops .all-shops .shops-fr button.owl-next {
+  top: 50%;
+}
+
+.shops .outter-shops .all-shops .shops-2r {
+  height: 400px;
+  margin-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.shops .outter-shops .all-shops .shops-2r button.owl-prev,
+.shops .outter-shops .all-shops .shops-2r button.owl-next {
+  top: 50%;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item {
+  width: 33%;
+  height: 100%;
+  border: 1px solid #dfe4ea;
+  background: white;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .shop-name-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px 0 0 15px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .shop-name-logo img {
+  margin-right: 15px;
+  width: 30px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .shop-name-logo h6, .shops .outter-shops .all-shops .shops-2r .first-item .shop-name-logo p {
+  margin: 0;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .shop-name-logo p.sub-title {
+  font-size: 16px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .single-img {
+  padding: 15px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .first-item .single-img img {
+  width: 100%;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner {
+  width: 67%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items {
+  height: 100%;
+  padding: 10px 20px 5px;
+  border: 1px solid #dfe4ea;
+  border-radius: 0;
+  background: white;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .product-img {
+  height: 45%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .product-img img {
+  width: 100%;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .product-img span.sale.small {
+  position: absolute;
+  font-size: 14px;
+  padding: 2px 15px;
+  bottom: 0;
+  left: 0;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+  height: 55%;
+  margin-top: 5%;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description h6.title {
+  font-size: 19px;
+  line-height: 21px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description p.sub-title {
+  font-size: 16px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description .current-old-price h5.price {
+  font-size: 21px;
+  line-height: 23px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description .item-action-icons {
+  bottom: 20px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description .item-action-icons div {
+  width: 30px;
+  height: 30px;
+}
+
+.shops .outter-shops .all-shops .shops-2r .shops-2r-inner .palette-items .description .item-action-icons div i {
+  font-size: 14px;
+  line-height: 30px;
+}
+
 .current-old-price {
   display: -webkit-box;
   display: -ms-flexbox;
