--- a/resources/sass/shop.scss
+++ b/resources/sass/shop.scss
@@ -13,7 +13,8 @@
 @import "2-layouts/nav-header";
 @import "2-layouts/slide-banner";
 @import "2-layouts/product-of-day";
-@import "2-layouts/catalog-view";
+@import "2-layouts/blog-body";
+@import "2-layouts/shop-view";
 @import "2-layouts/price-rating-comments";
 @import "2-layouts/pagination";
 
