--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -725,7 +725,7 @@ nav ol.breadcrumb li {
           transform: rotate(90deg);
 }
 
-.news-inner-btn, .blog-news-btn, .new-popular-recommended-btn {
+.news-inner-btn, .blog-news-btn, .new-popular-recommended-btn, .single-blog-btn {
   height: 65px;
   background: #f1f2f6;
   width: 100%;
@@ -745,7 +745,7 @@ nav ol.breadcrumb li {
           align-items: center;
 }
 
-.news-inner-btn button, .blog-news-btn button, .new-popular-recommended-btn button {
+.news-inner-btn button, .blog-news-btn button, .new-popular-recommended-btn button, .single-blog-btn button {
   padding: 15px 30px;
   color: #07108f;
   font-weight: bold;
@@ -757,7 +757,7 @@ nav ol.breadcrumb li {
   margin: 0 10px 0 0;
 }
 
-.news-inner-btn button.active, .blog-news-btn button.active, .new-popular-recommended-btn button.active {
+.news-inner-btn button.active, .blog-news-btn button.active, .new-popular-recommended-btn button.active, .single-blog-btn button.active {
   background: #0042ff;
   color: white;
 }
@@ -2555,303 +2555,6 @@ img.menu-auto-icon:hover {
   .slide-banner-guaranty,
   .slide-banner-payment {
     width: 90%;
-  }
-}
-
-#products-of-day {
-  width: 100%;
-  height: 335px;
-  padding: 0 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: white;
-  margin-top: 30px;
-}
-
-#products-of-day .product-item {
-  padding: 10px 20px;
-  width: 100%;
-  height: 300px;
-  margin: 0 10px;
-  border: 2px solid #07108f;
-  border-radius: 0;
-  background: #f1f2f6;
-}
-
-#products-of-day .product-item:last-child {
-  margin-right: 0;
-}
-
-#products-of-day .product-item:first-child {
-  margin-left: 0;
-}
-
-#products-of-day .product-item .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-#products-of-day .product-item .top h5 {
-  font-size: 20px;
-  color: #0042ff;
-}
-
-#products-of-day .product-item .top .time {
-  color: #07108f;
-  font-size: 20px;
-}
-
-#products-of-day .product-item .top .time span {
-  display: inline-block;
-}
-
-#products-of-day .product-item .top .time .day:after, #products-of-day .product-item .top .time .hour:after {
-  content: ":";
-  color: #07108f;
-  margin: 0 1px;
-}
-
-#products-of-day .product-item .product-info {
-  height: 88%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#products-of-day .product-item .product-info .product-image {
-  min-width: 180px;
-  height: 100%;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#products-of-day .product-item .product-info .product-image img {
-  width: auto;
-  height: auto;
-}
-
-#products-of-day .product-item .product-info .product-image span.sale {
-  position: absolute;
-  left: -5%;
-  bottom: 0;
-}
-
-#products-of-day .product-item .product-info .description {
-  width: 55%;
-  padding: 0 0 0 2%;
-  height: 100%;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  text-align: start;
-}
-
-#products-of-day .product-item .product-info .description .rate {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-#products-of-day .owl-theme .owl-nav.disabled + .owl-dots {
-  display: none;
-}
-
-@media all and (max-width: 1665px) {
-  #products-of-day .product-item .top h5 {
-    font-size: 18px;
-  }
-  #products-of-day .product-item .top .time {
-    font-size: 18px;
-  }
-  #products-of-day .product-item .product-info .product-image img {
-    height: 85%;
-  }
-}
-
-@media all and (max-width: 1522px) {
-  #products-of-day {
-    padding: 0 8%;
-  }
-}
-
-@media all and (max-width: 1400px) {
-  #products-of-day {
-    padding: 0 5%;
-  }
-  #products-of-day .product-item .product-info .description {
-    width: 50%;
-  }
-}
-
-@media all and (max-width: 1320px) {
-  #products-of-day {
-    padding: 0 5%;
-  }
-  #products-of-day .rate {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-  }
-}
-
-@media all and (max-width: 1250px) {
-  #products-of-day {
-    height: 350px;
-  }
-  #products-of-day .product-item {
-    width: 100%;
-  }
-  #products-of-day .product-item .product-info .description {
-    width: 57%;
-  }
-  #products-of-day .product-item .product-info .description .rate {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row;
-            flex-flow: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  #products-of-day .product-item .product-info .product-image img {
-    height: 100%;
-  }
-  #products-of-day .owl-dots {
-    display: block;
-    top: -10px;
-    right: 65px;
-  }
-}
-
-@media all and (max-width: 1000px) {
-  #products-of-day {
-    width: 60%;
-    padding: 0;
-    margin: 30px auto 0px;
-  }
-  #products-of-day .product-item .top h5, #products-of-day .product-item .top .time {
-    font-size: 22px;
-  }
-  #products-of-day .owl-dots {
-    right: 30px;
-  }
-}
-
-@media all and (max-width: 800px) {
-  #products-of-day {
-    width: 70%;
-  }
-}
-
-@media all and (max-width: 600px) {
-  #products-of-day {
-    width: 80%;
-  }
-  #products-of-day .product-item {
-    width: 100%;
-  }
-  #products-of-day .product-item .top h5, #products-of-day .product-item .top .time {
-    font-size: 20px;
-  }
-  #products-of-day .product-item .product-info .product-image img {
-    height: 90%;
-  }
-  #products-of-day .product-item .product-info .description .rate {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-  }
-  .owl-dots {
-    right: 20px;
-  }
-}
-
-@media all and (max-width: 500px) {
-  #products-of-day {
-    width: 90%;
-  }
-  #products-of-day .product-item {
-    width: 100%;
-  }
-  #products-of-day .product-item .product-info .product-image img {
-    height: 80%;
-  }
-  #products-of-day .owl-dots {
-    right: 10px;
-  }
-}
-
-@media all and (max-width: 400px) {
-  #products-of-day .product-item .top .time {
-    display: none;
-  }
-  #products-of-day .product-item .product-info .product-image {
-    width: 100%;
-  }
-  #products-of-day .product-item .product-info .description {
-    display: none;
   }
 }
 
