--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -259,7 +259,7 @@ nav ol.breadcrumb{
         }
     }
 }
-.news-inner-btn, .blog-news-btn, .new-popular-recommended-btn{
+.news-inner-btn, .blog-news-btn, .new-popular-recommended-btn, .single-blog-btn{
     height:65px;
     background:$bg_grey_color;
     width:100%;
