--- a/resources/sass/single-blog.scss
+++ b/resources/sass/single-blog.scss
@@ -13,10 +13,9 @@
 @import "2-layouts/nav-header";
 @import "2-layouts/slide-banner";
 
-@import "2-layouts/blog-body";
-@import "2-layouts/shop-view";
+@import "2-layouts/single-blog-body";
+
 @import "2-layouts/price-rating-comments";
-@import "2-layouts/pagination";
 
 @import "2-layouts/news-letter";
 @import "2-layouts/footer";
