--- a/public/css/single-blog.css
+++ b/public/css/single-blog.css
@@ -159,6 +159,259 @@
   }
 }
 
+.irs {
+  position: relative;
+  display: block;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.irs-line {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  outline: none !important;
+}
+
+.irs-line-left, .irs-line-mid, .irs-line-right {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.irs-line-left {
+  left: 0;
+  width: 11%;
+}
+
+.irs-line-mid {
+  left: 9%;
+  width: 82%;
+}
+
+.irs-line-right {
+  right: 0;
+  width: 11%;
+}
+
+.irs-bar {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 0;
+}
+
+.irs-bar-edge {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+}
+
+.irs-slider {
+  position: absolute;
+  display: block;
+  cursor: default;
+  z-index: 1;
+}
+
+.irs-slider.type_last {
+  z-index: 2;
+}
+
+.irs-grid {
+  position: absolute;
+  display: none;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+}
+
+.irs-with-grid .irs-grid {
+  display: block;
+}
+
+.irs-grid-pol {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 8px;
+  background: #000;
+}
+
+.irs-grid-pol.small {
+  height: 4px;
+}
+
+.irs-grid-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  white-space: nowrap;
+  text-align: center;
+  font-size: 9px;
+  line-height: 9px;
+  padding: 0 3px;
+  color: #000;
+}
+
+.irs-disable-mask {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: -1%;
+  width: 102%;
+  height: 100%;
+  cursor: default;
+  background: rgba(0, 0, 0, 0);
+  z-index: 2;
+}
+
+.lt-ie9 .irs-disable-mask {
+  background: #000;
+  filter: alpha(opacity=0);
+  cursor: not-allowed;
+}
+
+.irs-disabled {
+  opacity: 0.4;
+}
+
+.irs-hidden-input {
+  position: absolute !important;
+  display: block !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
+  font-size: 0 !important;
+  line-height: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  outline: none !important;
+  z-index: -9999 !important;
+  background: none !important;
+  border-style: solid !important;
+  border-color: transparent !important;
+}
+
+.irs {
+  height: 55px;
+}
+
+.irs-with-grid {
+  height: 75px;
+}
+
+.irs-line {
+  height: 1px;
+  top: 33px;
+  background: #EEE;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(-50%, #DDD), color-stop(150%, #FFF));
+  background: linear-gradient(to bottom, #DDD -50%, #FFF 150%);
+  /* W3C */
+  border: 1px solid #CCC;
+  border-radius: 16px;
+  -moz-border-radius: 16px;
+}
+
+.irs-line-left {
+  height: 1px;
+}
+
+.irs-line-mid {
+  height: 1px;
+}
+
+.irs-line-right {
+  height: 1px;
+}
+
+.irs-bar {
+  height: 1px;
+  top: 33px;
+  border-top: 1px solid #0042ff;
+  border-bottom: 1px solid #0042ff;
+  background: #0042ff;
+  background: -webkit-gradient(linear, left bottom, left top, from(#428bca), to(#7fc3e8));
+  background: linear-gradient(to top, #428bca 0%, #7fc3e8 100%);
+  /* W3C */
+}
+
+.irs-bar-edge {
+  height: 10px;
+  top: 33px;
+  width: 14px;
+  border: 1px solid #0042ff;
+  border-right: 0;
+  background: #0042ff;
+  background: -webkit-gradient(linear, left bottom, left top, from(#428bca), to(#7fc3e8));
+  background: linear-gradient(to top, #428bca 0%, #7fc3e8 100%);
+  /* W3C */
+  border-radius: 16px 0 0 16px;
+  -moz-border-radius: 16px 0 0 16px;
+}
+
+.irs-shadow {
+  height: 2px;
+  top: 38px;
+  background: #000;
+  opacity: 0.3;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+
+.lt-ie9 .irs-shadow {
+  filter: alpha(opacity=30);
+}
+
+.irs-slider {
+  top: 22px;
+  width: 22px;
+  height: 22px;
+  border: 2px solid #0042ff;
+  background: white;
+  border-radius: 27px;
+  -moz-border-radius: 27px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.irs-slider.state_hover, .irs-slider:hover {
+  background: #FFF;
+}
+
+.irs-min, .irs-max, .lt-ie9 .irs-min, .lt-ie9 .irs-max, .irs-from, .irs-to, .irs-single, .irs-shadow {
+  display: none;
+}
+
+.lt-ie9 .irs-from, .lt-ie9 .irs-to, .lt-ie9 .irs-single {
+  background: #999;
+}
+
+.irs-grid {
+  height: 27px;
+}
+
+.irs-grid-pol {
+  opacity: 0.5;
+  background: #0042ff;
+}
+
+.irs-grid-pol.small {
+  background: #999;
+}
+
+.irs-grid-text {
+  bottom: 5px;
+  color: #99a4ac;
+}
+
 @font-face {
   font-family: 'cerapro-bold';
   src: url("../fonts/cerapro-bold.ttf");
@@ -2240,13 +2493,231 @@ img.menu-auto-icon:hover {
   }
 }
 
-.outter-sales {
-  width: 100%;
+.slide-banner-catalog,
+.slide-banner-brandv,
+.slide-banner-shopv,
+.slide-banner-delivery,
+.slide-banner-guaranty,
+.slide-banner-payment {
+  width: 80%;
+  height: 200px;
+  margin: 1%  auto 2%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.outter-sales .sales-banners {
+.slide-banner-catalog {
+  background: url("../images/catalog-slider-banner.png");
+  margin: 1%  auto 1%;
+}
+
+.slide-banner-brand-view .h4-title {
+  padding: 0.5% 10%;
+}
+
+.slide-banner-brand-view .slide-banner-brandv {
+  background: url("../images/brand-view-slide-banner.png");
+}
+
+.slide-banner-shopv {
+  background: url("../images/shop-view-slide-banner.png");
+}
+
+.slide-banner-delivery {
+  background: url("../images/delivery-slide-banner.png");
+}
+
+.slide-banner-guaranty {
+  background: url("../images/guaranty-slide-banner.png");
+}
+
+.slide-banner-payment {
+  background: url("../images/payment-slide-banner.png");
+}
+
+@media all and (max-width: 1522px) {
+  .slide-banner-catalog,
+  .slide-banner-brandv,
+  .slide-banner-shopv,
+  .slide-banner-delivery,
+  .slide-banner-guaranty,
+  .slide-banner-payment {
+    width: 84%;
+  }
+}
+
+@media all and (max-width: 1400px) {
+  .slide-banner,
+  .slide-banner-brandv,
+  .slide-banner-shopv,
+  .slide-banner-delivery,
+  .slide-banner-guaranty,
+  .slide-banner-payment {
+    width: 90%;
+  }
+}
+
+.outter-single-blog-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
-  padding: 0% 10%;
+  min-height: 100px;
+  padding: 2% 10%;
+  text-align: left;
+}
+
+.outter-single-blog-body .search-side-bar {
+  width: 20%;
+  height: auto;
+}
+
+.outter-single-blog-body .inner-single-blog-body {
+  width: 70%;
+  height: auto;
+}
+
+.outter-single-blog-body .inner-single-blog-body img.full-width {
+  width: 90%;
+  height: 555px;
+}
+
+.outter-single-blog-body .inner-single-blog-body .description {
+  margin: 1% 0;
+  text-align: left;
+}
+
+.outter-single-blog-body .inner-single-blog-body .description h5.title {
+  font-size: 30px;
+  color: #0b2546;
+}
+
+.outter-single-blog-body .inner-single-blog-body .description p {
+  color: #0b2546;
+  font-size: 20px;
+}
+
+.outter-single-blog-body .inner-single-blog-body .description h6.title {
+  color: #0b2546;
+  font-size: 20px;
+  font-family: 'cerapro-bold';
+}
+
+.outter-single-blog-body .inner-single-blog-body img.medium-width {
+  width: 50%;
+  margin: 0 auto;
+  height: 500px;
+}
+
+.outter-single-blog-body .inner-single-blog-body img.medium-width h6 {
+  font-family: 'cerapro-bold';
+}
+
+.outter-single-blog-body .inner-single-blog-body img.medium-width img {
+  width: 100%;
+  height: 100%;
+}
+
+.outter-single-blog-body .inner-single-blog-body .three-column-description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-single-blog-body .inner-single-blog-body .three-column-description .item {
+  width: 32%;
+  height: auto;
+}
+
+.outter-single-blog-body .inner-single-blog-body .text-and-img {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.outter-single-blog-body .inner-single-blog-body .text-and-img .description {
+  width: 80%;
+}
+
+.outter-single-blog-body .inner-single-blog-body .text-and-img .image {
+  width: 20%;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a {
+  width: 100%;
+  margin: 1% 0;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a:hover {
+  cursor: pointer;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+  -webkit-box-shadow: 0px 2px 7px -5px black;
+          box-shadow: 0px 2px 7px -5px black;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a:hover .blog-item .description {
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+  background-color: white;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a:hover .blog-item .image .image-overlay {
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+  opacity: 0;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .blog-item {
+  height: 175px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2260,40 +2731,60 @@ img.menu-auto-icon:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.outter-sales .sales-banners .sales-full-banner {
   width: 100%;
-  height: 200px;
-  background: url("../images/sales-full-banner.png");
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.outter-sales .sales-banners .banner-item {
-  width: 32%;
-  margin: 1% auto;
-  height: auto;
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .blog-item .image {
+  width: 40%;
+  height: 175px;
   position: relative;
 }
 
-.outter-sales .sales-banners .banner-item img {
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .blog-item .image img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
-.outter-sales .sales-banners .banner-item span {
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .blog-item .image .image-overlay {
+  width: 100%;
+  height: 175px;
   position: absolute;
-  left: 10px;
-  bottom: 10px;
-  color: white;
-  font-family: 'cerapro-bold';
-  background: #242954;
-  border-radius: 15px;
-  font-size: 20px;
-  padding: 5px 17px;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  background-color: #2449c5;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .description {
+  background-color: #f1f2f6;
+  width: 60%;
+  height: 100%;
+  text-align: start;
+  padding: 0 2%;
+  color: #0b2546;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .description h6.title {
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 2%;
+}
+
+.outter-single-blog-body .inner-single-blog-body .all-filtered-blogs a .description p {
+  font-size: 18px;
 }
 
 .current-old-price {
@@ -2577,54 +3068,6 @@ img.menu-auto-icon:hover {
   .comment {
     font-size: 18px;
   }
-}
-
-nav.products-pagination {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 2% 0;
-}
-
-nav.products-pagination ul {
-  margin: 0;
-}
-
-nav.products-pagination ul li {
-  width: 50px;
-  height: 50px;
-  margin: 0 10px 0 0;
-  border: 1px solid #a9b4c2;
-  border-radius: 50%;
-}
-
-nav.products-pagination ul li.active {
-  background: #07108f;
-}
-
-nav.products-pagination ul li.active a {
-  color: white;
-}
-
-nav.products-pagination ul li a {
-  color: #07108f;
-  line-height: 50px;
-  font-size: 20px;
-  padding: 0;
-  font-weight: bold;
-}
-
-nav.products-pagination ul li a i {
-  font-size: 15px;
-  line-height: 50px;
-}
-
-nav.products-pagination ul li a i:before {
-  color: #07108f;
 }
 
 .news-letter {
