--- a/resources/sass/2-layouts/_single-blog-body.scss
+++ b/resources/sass/2-layouts/_single-blog-body.scss
@@ -1,18 +1,36 @@
 .outter-single-blog-body{
-    @include displayFlex(space-between, row, center);
+    @include displayFlex(space-between, row, flex-start);
     width:100%;
     min-height:100px;
     padding:2% 10%;
     text-align:left;
-    .search-side-bar{
-        width:20%;
-        height:auto;
+    div#search-bar.search-bar{
+        width:27%;
+        height:45px;
+        padding-right:2px;
+        @include displayFlex(flex-start, row, center);
+        @include border(1px, $link_hover_color, 23px);
+        input{
+            width:100%;
+        }
+        button.search{
+            width:50px;
+            height:40px;
+            padding:0;
+            background:$item_price_color;
+            @include border(1px, $item_price_color,23px);
+            i.fa-search::before{
+                color:#ffffff;
+                font-size:20px;
+                line-height:28px;
+            }
+        }
     }
     .inner-single-blog-body{
         width:70%;
         height:auto;
         img.full-width{
-            width:90%;
+            width:100%;
             height:555px;
         }
         .description{
@@ -32,16 +50,14 @@
                 @include fontBold;
             }
         }
-        img.medium-width{
-                width:90%;
-                margin:0 auto;
-                height:500px;
-                h6{
-                    @include fontBold;
-                }
+        .medium-width{
+                width:100%;
+                min-height:200px;
+                display:flex;
                 img{
-                    width:100%;
-                    height:100%;
+                    width:70%;
+                    height:auto;
+                    margin:0 auto;
                 }
         }
         .three-column-description{
@@ -49,6 +65,9 @@
             .item{
                 width:32%;
                 height:auto;
+                h6{
+                    @include fontBold;
+                }
             }
         }
         .text-and-img{
@@ -59,6 +78,10 @@
             }
             .image{
                 width:20%;
+                img{
+                    width:100%;
+                    height:auto;
+                }
             }
         }
         .all-filtered-blogs{
