--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -28,6 +28,11 @@ $item_title_color:#0b2546;
 $item_border_color:#dfe4ea;
 
 
+$product_grey_color:#bfbfbf;
+$product_blue_color:#1463cf;
+$product_green_color:#1a6c26;
+
+
 // Body
 $body-bg: #f8fafc;
 
