--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -45,7 +45,7 @@ input{
 }
 h4.title{
     font-size:26px;
-    color:$item-title-color;
+    color:$title-color;
     width:100%;
 }
 .h4-title{
@@ -55,7 +55,8 @@ h4.title{
     vertical-align: middle;
     background:$bg_grey_color;
     &.video-blog, &.catalog-view, &.pay-body,
-     &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body{
+     &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
+     &.u-will-also-like, &.other-products-of-this-seller{
         padding:1% 10%;
     }
 }
@@ -313,7 +314,8 @@ nav ol.breadcrumb{
     .h4-title{
         padding:3% 8%;
         &.video-blog, &.catalog-view, &.pay-body,
-         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body{
+         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
+         &.u-will-also-like, &.other-products-of-this-seller{
             padding:1% 8%;
         }
     }
@@ -322,7 +324,8 @@ nav ol.breadcrumb{
     .h4-title{
         padding:2% 5%;
         &.video-blog, &.catalog-view, &.pay-body,
-         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body{
+         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
+         &.u-will-also-like, &.other-products-of-this-seller{
             padding:1% 5%;
         }
     }
@@ -376,7 +379,8 @@ nav ol.breadcrumb{
     .h4-title{
         padding:2.5% 5%;
         &.video-blog, &.catalog-view, &.pay-body,
-         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body{
+         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
+         &.u-will-also-like, &.other-products-of-this-seller{
             padding:1.5% 5%;
         }
     }
@@ -401,7 +405,8 @@ nav ol.breadcrumb{
     .h4-title{
         padding:3% 5%;
         &.video-blog, &.catalog-view, &.pay-body,
-         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body{
+         &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
+         &.u-will-also-like, &.other-products-of-this-seller{
             padding:2% 5%;
         }
     }
